Experimental buffering for buffers that cause underflows When not enough content is available to even read the length we have an issue and have to resort to cumulation sadly